--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -100,11 +100,16 @@
         {% for ref in item.groups[1].refs %}
           {% if ref.item.item_type == "image" %}
             {% if settings.showGallery and loop.index0 + 1 < loop.length and item.groups[1].refs[loop.index0 + 1].item.item_type == "image" and (loop.index0 - 1 < 0 or not (loop.index0 > 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image")) %}
+              {# this works only for first element in gallery loop bcs variables are scoped in jinja2 #}
               {% set galleryItem = true %}
               <!-- slideshow start -->
               <div class="lb-slideshow">
                 <div class="lb-slideshow_frame">
                   <div class="lb-slideshow_slides">
+            {% endif %}
+            {# if previous item was an image and current item is an image as well = we are inside gallery loop #}
+            {% if settings.showGallery and item.groups[1].refs[loop.index0 - 1].item.item_type == "image" %}
+              {% set galleryItem = true %}
             {% endif %}
             <!-- image item start -->
             <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}{{ref.item.item_type}}">
@@ -135,8 +140,7 @@
               <span class="lb-slideshow_next">
                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"/></g></svg>
               </span>
-            </div>
-            {% set galleryItem = false %}
+            </div> 
             <!-- slideshow end -->
           {% endif %}
         {% endfor %}
