--- a/less/embed.less
+++ b/less/embed.less
@@ -643,7 +643,7 @@
   //}
 
   [class*="lb-type--embed"] {
-    background-image: url("../images/link-icon.svg");
+    background-image: url("../images/link-icon.png");
     background-size: 9px;
   }
 
