--- a/templates/template-item-embed.html
+++ b/templates/template-item-embed.html
@@ -1,8 +1,8 @@
-{% if ref.item.meta.provider_name|lower == 'youtube' %}
+{% if ref.item.meta.provider_name|lower == 'youtube' and ref.item.meta.html %}
     <div class="item--embed__element lb-responsive-video">{{ ref.item.meta.html | safe }}</div>
-{% elif ref.item.meta.provider_name|lower == 'facebook' %}
+{% elif (ref.item.meta.provider_name|lower == 'facebook' or ref.item.meta.provider_name|lower == 'twitter') and ref.item.meta.html  %}
     <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
-{% elif ref.item.meta.provider_name|lower == 'instagram' %}
+{% elif ref.item.meta.provider_name|lower == 'instagram' and ref.item.meta.original_url %}
     <blockquote class="embedly-card" data-card-controls="0">
         <h4><a href="{{ ref.item.meta.original_url }}">{{ ref.item.meta.credit }}</a></h4>
         <p>{{ ref.item.meta.title }}</p>
