--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -18,7 +18,7 @@
 
   {% if settings.stickyPosition == 'top'%}
     <div class="timeline-top timeline-top--loaded">
-      <section data-timeline-sticky class="lb-posts list-group">
+      <section data-timeline-sticky class="lb-posts list-group{% if not api_response.stickyPosts._items|length %} sticky--empty{% endif %}">
         {% for item in api_response.stickyPosts._items %}
           {% if not item.deleted %}
             {% include "template-post.html" %}
@@ -101,7 +101,7 @@
         <div>{{ translate("See new updates") }}</div>
       </div>
     {% if settings.stickyPosition == 'bottom' %}
-      <section data-timeline-sticky class="lb-posts list-group sticky">
+      <section data-timeline-sticky class="lb-posts list-group sticky{% if not api_response.stickyPosts._items|length %} sticky--empty{% endif %}">
         {% for item in api_response.stickyPosts._items %}
           {% if not item.deleted %}
             {% include "template-post.html" %}
@@ -131,6 +131,8 @@
 
 </div>
 {% endblock %}
+
+{% include "template-embed-providers.html" %}
 
 {% if include_js_options %}
   <script type="text/javascript">
