--- a/server/liveblog/themes/themes_assets/amp/templates/template-item-embed.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-item-embed.html
@@ -1,24 +1,24 @@
-{% if ref.item.meta.provider_name == 'YouTube' %}
+{% if ref.item.meta.provider_name == 'YouTube' and ref.item.meta.original_id %}
   <amp-youtube
     data-videoid="{{ ref.item.meta.original_id }}"
     layout="responsive"
     width="480" height="270">
   </amp-youtube>
-{% elif ref.item.meta.provider_name == 'Facebook' %}
+{% elif ref.item.meta.provider_name == 'Facebook' and ref.item.meta.original_url %}
   <amp-facebook width="480" height="270"
     layout="responsive"
     data-href="{{ ref.item.meta.original_url }}">
   </amp-facebook>
-{% elif ref.item.meta.provider_name == 'Twitter' %}
+{% elif ref.item.meta.provider_name == 'Twitter' and ref.item.meta.original_id %}
   <amp-twitter width="480" height="270"
     layout="responsive"
     data-tweetid="{{ ref.item.meta.original_id }}">
   </amp-twitter>
-{% elif ref.item.meta.provider_name == 'Instagram' %}
+{% elif ref.item.meta.provider_name == 'Instagram' and ref.item.meta.original_id %}
   <amp-instagram
     data-shortcode="{{ ref.item.meta.original_id }}"
-    width="480"
-    height="270"
+    width="1"
+    height="1"
     layout="responsive">
   </amp-instagram>
 {% else %}
