--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -44,7 +44,7 @@
       <!-- remove advertisement stylization-->
       {% if item.post_items_type != "advertisement" %}
   
-      <div class="lb-post-date relativeDate" data-js-timestamp="{{ postDate }}">{{ postDate }}</div>
+      <div class="lb-post-date relativeDate mod--displaynone" data-js-timestamp="{{ postDate }}">{{ postDate | date('') }}</div>
 
     </div>
     <!-- author plus avatar -->
@@ -152,7 +152,7 @@
   <div class="lb-post-bottom">
     {% if settings.showUpdateDatetime and (item.content_updated_date != item.firstcreated) and item.post_items_type != "advertisement" %}
       <div class="lb-post-updated">
-        <span>{{ translate('Updated') }}</span> <span class="lb-post-updated-time relativeDate" data-js-timestamp="{{item.content_updated_date}}">{{item.content_updated_date}}</span>
+        <span>{{ translate('Updated') }}</span> <span class="lb-post-updated-time relativeDate mod--displaynone" data-js-timestamp="{{item.content_updated_date}}">{{item.content_updated_date | date('')}}</span>
       </div>
     {% endif %}
 
