--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -268,14 +268,14 @@
 <div class="scorecard-top @scorecard-top--background? background.img" style="background-size: cover; @background-image: background.img">
     <div class="scorecard-top__column scorecard-top__column--result">
         <div>
-            <label for="home.score" hide-render>Score Home</label>
+            <label for="home.score" hide-render>Home Score</label>
             <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true" />
         </div>
         <div class="team-score-colon">
             <span class="team-score">:</span>
         </div>
         <div>
-            <label for="away.score" hide-render>Score Away</label>
+            <label for="away.score" hide-render>Away Score</label>
             <input id="away.score" name="$away.score" class="team-score" necessary="true" number="true" />
         </div>
     </div>
@@ -290,12 +290,12 @@
             </div>
             <hr hide-render>
             <div>
-                <label for="home.name" hide-render>Name</label>
+                <label for="home.name" hide-render>Home Name</label>
                 <input id="home.name" name="$home.name" class="team-name" necessary="true" />
             </div>
         </fieldset>
         <fieldset>
-            <legend class="legend--padding-top" hide-render>Scorers:</legend>
+            <legend class="legend--padding-top" hide-render>Home Scorers:</legend>
             <ul class="scorecard-top__scorers">
                 <li>
                     <div class="time">
@@ -303,7 +303,7 @@
                         <input name="$home.scorers[0].time" tandem="$home.scorers[0].name" number="true" />
                     </div>
                     <div>
-                        <label hide-render>Name</label>
+                        <label hide-render>Home Name</label>
                         <input name="$home.scorers[0].name" tandem="$home.scorers[0].time"/>
                     </div>
                 </li>
@@ -320,12 +320,12 @@
             </div>
             <hr hide-render>
             <div>
-                <label for="away.name" hide-render>Name</label>
+                <label for="away.name" hide-render>Away Name</label>
                 <input id="away.name" name="$away.name" class="team-name" necessary="true"/>
             </div>
         </fieldset>
         <fieldset>
-            <legend class="legend--padding-top" hide-render>Scorers:</legend>
+            <legend class="legend--padding-top" hide-render>Away Scorers:</legend>
             <ul class="scorecard-top__scorers">
                 <li>
                     <div>
@@ -333,7 +333,7 @@
                         <label hide-render>Minute</label>
                         <input name="$away.scorers[0].time" tandem="$away.scorers[0].name" number="true"/>
                     </div>
-                        <label hide-render>Name</label>
+                        <label hide-render>Away Name</label>
                         <input name="$away.scorers[0].name" tandem="$away.scorers[0].time"/>
                     </div>
                 </li>
@@ -342,7 +342,7 @@
     </div>
     <div class="scorecard-top__info">
         <div>
-            <label for="match.quaters" hide-render>Quater results</label>
+            <label for="match.quaters" hide-render>Halftime results</label>
             <input id="match.quaters" name="$match.quaters" class="match-quaters"/>
         </div>
         <div>
